[gd_scene load_steps=3 format=2]

[ext_resource path="res://World/Scripts/Environment.gd" type="Script" id=1]
[ext_resource path="res://World/Ground.tscn" type="PackedScene" id=2]

[node name="Environment" type="Node2D"]
script = ExtResource( 1 )

[node name="Ground" parent="." instance=ExtResource( 2 )]

[node name="Ground3" parent="." instance=ExtResource( 2 )]
position = Vector2( -560, 480 )

[node name="Ground2" parent="." instance=ExtResource( 2 )]
position = Vector2( 1730, 480 )

[node name="CloudSpawnTimer" type="Timer" parent="."]

[node name="BirdSpawnTimer" type="Timer" parent="."]

[node name="CactiSpawnTimer" type="Timer" parent="."]
[connection signal="timeout" from="CloudSpawnTimer" to="." method="_on_CloudSpawnTimer_timeout"]
[connection signal="timeout" from="BirdSpawnTimer" to="." method="_on_BirdSpawnTimer_timeout"]
[connection signal="timeout" from="CactiSpawnTimer" to="." method="_on_CactiSpawnTimer_timeout"]
